<resources>
    <string name="app_name">ScanCamAnalyze</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_Log">Log</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="image_preview">gambar analisis</string>
    <string name="title_login_page">Selamat datang di Aplikasi</string>
    <string name="message_login_page">silahkan Untuk Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title_signup_page">Silahkan Untuk Membuat Akun Terlebih Dahulu</string>
    <string name="name">Nama</string>
    <string name="signup">SIGNUP</string>
    <string name="image_auth">image signup</string>
    <string name="title_welcome_page">Selamat Datang Di Aplikasi</string>
    <string name="message_welcome_page">Jika Belum Punya Account Harap Signup</string>
    <string name="avatar">Foto Profile</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="level">Level</string>
    <string name="result_analyze">Hasilnya di sini\n1. Jerawat batu: rekomendasi pagi hari level 1\n2. Bentol: rekomendasi pagi hari level 2</string>
    <string name="title_signup">Create a new account</string>
    <string name="register">REGISTER</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="photo">detail photo analyze\n</string>
    <string name="back_button">back</string>
    <string name="product_image">produk image</string>
    <string name="pagi">Pagi hari</string>
    <string name="malam">Malam Hari</string>
    <string name="error_email">Format email tidak valid</string>
    <string name="error_password">Minimal 8 karakter, Setidaknya 1 angka.</string>
    <string name="category_item">Kategori Item</string>
    <string name="title_atas">Lakukan Rutin Kamu dengan beraktivitas supaya kulit tetap sehat</string>
    <string name="title_atas_sendiri">Selamat datang di Aplikasi...</string>
    <string name="rekomendasi_produk">Rekomendasi produk perawatan Muka</string>

</resources>