<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.analyze.DetailAnalyzeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_detail_photo_analyze"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/photo"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_detail_analyze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/level"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_detail_description_analyze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textSize="16sp" />

    </LinearLayout>


</ScrollView>